changed bgm to cotton removed main pic about page green text midnight sapphire

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Vina+Sans&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles 2022 ver.css">
+    <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,19 +40,16 @@
     <!-- intro -->
     <section class="intro" id="intro">
         <div class="main">
-            <div class="mainpic">
-                <img src="red.png"> <!-- style="width:650px;height:650px;"(REMOVE IF NOT NEEDED) -->
-            </div> <!-- mainpic comment: want to do gradual col change for entire web -->
+            <h4>Hey, my name is</h4>
+            <h1>Michelle <span>Hon</span></h1>
+            <h3>Science Undergraduate Student | Tech Enthusiast | Amateur Coder</h3>
 
-            <h4 class="hi">Hi, my name is</h4>
-            <h1 class="mh">Michelle <span>Hon</span></h1>
-            <h3 class="hss">Science <br>Undergraduate <br>Student</h3>
-            <h3 class="te">Tech <br>Enthusiast</h3>
-            <h3 class="ac">Amateur <br>Coder</h3>
-
-
-            <a href="#contact" class="contactbutton">Contacts</a>
-            <a href="MichelleH's resume.docx" class="resumebtn">Resume</a><!-- new resume link needed -->
+            <ul class="intro-socials">
+                <li><a href="https://github.com/MichelleHon"><i class="fab fa-github"></i></a></li>
+                <li><a href="mailto: michellecyhon@gmail.com"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/hon-michelle/"><i class="fab fa-linkedin"></i></a></li>
+            </ul>
+            <a href="#skills" class="learn-more-button">Learn more about me</a>
 
         </div>
     </section>
