--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                 <div class="back">
                     <h3>TGD Media Representation Research</h3>
                     <h5>Conducted qualitative analysis on 4 interviews and online discussions to identify 3 key themes in the 
-                        transgender and gender-diverse communities’ perspectives on media representation.</h5>
+                        TGD communities’ perspectives on media representation.</h5>
                     <h5>Revealed persistent frustration in the TGD community with stereotypical media portrayals and 
-                        identified a strong call for more authentic, complex, and normalized representation for transgender 
-                        and gender-diverse characters in mainstream media.</h5>
+                        identified a strong call for more authentic, complex, and normalized representation for TGD 
+                        characters in mainstream media.</h5>
                     <a href="https://drive.google.com/file/d/1z5nZqwZDfHrNRjFo6lsIUd2knx_lafh8/view?usp=sharing" class="link">View Project</a>
                 </div>
             </div>
@@ -123,32 +123,34 @@
     <div class="eca" id="eca">
         <h1 class="welcome">Extracurriculars</h1>
 
-        <div class="widspic">
-            <img src="wids.jfif" style="width:150px;height:150px;">
-        </div>
-              
-        <div class="ltspic">
-            <img src="lts.jfif" style="width:150px;height:150px;">
+        <div class="pic-box"> <!--paircontainer-->
+            <div class="widspic"> <!--picturecontainer-->
+                <img src="wids.jfif" style="width:150px;height:150px;">
+            </div>
+            <div class="wids">
+                <h2>Woman in Data Science</h2><br>
+                <h3>EmpowHer Mentorship Mentor</h3> <br>
+                <h4>December 2024 – May 2025</h4> <br>
+                <p>•	Mentored high school students in data analysis and visualization using Python, created 5 sessions of 
+                    tailored content and hands-on experiences to enrich their learning.</p><br>
+                <p>•	Collaborated with 10 mentees on individual projects, provided guidance and support to develop their 
+                    analytical skills.</p><br>
+            </div>
         </div>
 
-        <div class="wids">
-            <h2>Woman in Data Science</h2><br>
-            <h3>EmpowHer Mentorship Mentor</h3> <br>
-            <h4>December 2024 – May 2025</h4> <br>
-            <p>•	Mentored high school students in data analysis and visualization using Python, created 5 sessions of 
-                tailored content and hands-on experiences to enrich their learning.</p><br>
-            <p>•	Collaborated with 10 mentees on individual projects, provided guidance and support to develop their 
-                analytical skills.</p><br>
-        </div>
-                
-        <div class="lts">
-            <h2>Let’s Talk Science</h2><br>
-            <h3>Outreach Volunteer</h3> <br>
-            <h4>November 2024 – June 2025</h4> <br>
-            <p>•	Facilitated communication between the organization and educators to customize workshop content for 
-                effective learning.</p><br>
-            <p>•	Developed and presented 4 interactive sessions of science experiments to 30 students in grade 5 and 
-                6, enhancing their understanding and curiosity in science.</p><br>
+        <div class="pic-box">
+            <div class="ltspic">
+                <img src="lts.jfif" style="width:150px;height:150px;">
+            </div>
+            <div class="lts">
+                <h2>Let’s Talk Science</h2><br>
+                <h3>Outreach Volunteer</h3> <br>
+                <h4>November 2024 – June 2025</h4> <br>
+                <p>•	Facilitated communication between the organization and educators to customize workshop content for 
+                    effective learning.</p><br>
+                <p>•	Developed and presented 4 interactive sessions of science experiments to 30 students in grade 5 and 
+                    6, enhancing their understanding and curiosity in science.</p><br>
+            </div>
         </div>
     </div>
 
